--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: saikirandevops/tektonapp:latest
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "2"
 
 imagePullSecrets: []
 nameOverride: ""
