--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: saikirandevops/tektonapp
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 2"
+  tag: "1"
 
 imagePullSecrets: []
 nameOverride: ""
